# startposbuddy

./: CMakeLists.txt  about.md  mod.json
.github/workflows/: build.yml
src/: main.cpp
startpos-switcher/: mod.json
